k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: mongo-deployment
spec: 
    replicas: 1
    selector:
        matchLabels:
            component: mongo
    template:
        metadata: 
            labels:
                component: mongo
        spec:
            volumes:
                - name: mongo-storage
                  persistentVolumeClaim:
                    claimName: database-persistent-volume-claim
            containers: 
                - name: mongo
                  image: mongo
                  ports: 
                    - containerPort: 27017
                  volumeMounts:
                    - name: mongo-storage
                      mountPath: /data/db
                      subPath: mongo
