k8s/client-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
    name: client-cluster-ip-service
spec: 
    type: ClusterIP
    selector:
        component: web
    ports:
        - targetPort: 3000
          port: 3000
