k8s/server-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
    name: server-cluster-ip-service
spec: 
    type: ClusterIP
    selector:
        component: server
    ports:
        - targetPort: 3001
          port: 3001
