k8s/ingress-service.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations: 
        kubernetes.io/ingress.class: nginx
spec: 
    rules:
        - http:
            paths:
                - path: /?(.*)
                  backend:
                    serviceName: client-cluster-ip-service
                    servicePort: 3000
                - path: /graphql/?(.*)
                  backend:
                    serviceName: server-cluster-ip-service
                    servicePort: 3001
